--- a/GameContents/Assets/Scripts/Game/Net/Lobbies/Game.Net.Lobbies.asmdef
+++ b/GameContents/Assets/Scripts/Game/Net/Lobbies/Game.Net.Lobbies.asmdef
@@ -1,9 +1,10 @@
 {
-    "name": "Game.Net.Auth",
+    "name": "Game.Net.Lobbies",
     "rootNamespace": "",
     "references": [
-        "Unity.TextMeshPro",
-        "NetworkStatus"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:55190967d23051a47a912b97fd01befc",
+        "GUID:299cdbbad7a159f41930f29228a2d39b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
